# amr-control-system

./: .gitignore  README.md
infrastructure/: docker-compose.yml
infrastructure/ros-dev/: Dockerfile.ros  entrypoint.sh
robot/amr_hardware/: CMakeLists.txt  package.xml
robot/amr_hardware/launch/: gazebo_sim.launch.py
robot/amr_hardware/msg/: RobotStatus.msg
robot/amr_hardware/src/: motor_controller.cpp  motor_controller_v2.cpp  motor_listener.cpp
robot/amr_hardware/urdf/: simple_robot.urdf
services/fleet-manager/: Dockerfile  web_fms.py
services/fleet-manager/src/: cmd_vel_converter.py  fms_server.py  fms_server.py.bak  mqtt_bridge_test copy.py  mqtt_bridge_working.py  mqtt_bridge_working.py.bak  mqtt_monitor.py  ros_mqtt_bridge.py  test_bridge.py
